WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277540
Fix a few more type mismatches in WasmOMGIRGenerator32_64.cpp
https://bugs.webkit.org/show_bug.cgi?id=277540
Summary
Fix a few more type mismatches in WasmOMGIRGenerator32_64.cpp
Angelos Oikonomopoulos
Reported
2024-08-02 02:05:21 PDT
Mostly around refs.
Attachments
Add attachment
proposed patch, testcase, etc.
Angelos Oikonomopoulos
Comment 1
2024-08-02 02:07:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31637
EWS
Comment 2
2024-08-02 11:05:31 PDT
Committed
281768@main
(41ad1501923f): <
https://commits.webkit.org/281768@main
> Reviewed commits have been landed. Closing PR #31637 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-08-02 11:11:56 PDT
<
rdar://problem/133076563
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug