Fix a few more type mismatches in WasmOMGIRGenerator32_64.cpp https://bugs.webkit.org/show_bug.cgi?id=277540

Reviewed by Justin Michaud.

Fix a number of typing mismatches around refs.

* Source/JavaScriptCore/wasm/WasmOMGIRGenerator32_64.cpp:
(JSC::Wasm::OMGIRGenerator::addI31GetU):
(JSC::Wasm::OMGIRGenerator::emitRefTestOrCast):
(JSC::Wasm::OMGIRGenerator::addCallRef):

Canonical link: https://commits.webkit.org/281768@main